[package]
name = "appstore"
version = "0.1.0"
authors = ["sombrastudios <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.3.2"              # Data-oriented Rust UI design toolkit.
druid-derive = "0.1.1"       # derive impls for druid, a Rust UI toolkit.
